fix: Add other contrast fix I forgot to push. Dark text on PostCards (#21)
* Use near-black for post card text for increased contrast

--- a/source/stylesheets/components/blog/_post_cards.scss
+++ b/source/stylesheets/components/blog/_post_cards.scss
@@ -29,7 +29,7 @@
 
   &-title {
     @include title-font;
-    color: gray('white');
+    color: gray('near-black');
     display: inline-block;
     font-size: 20px;
     margin-bottom: 10px;
@@ -37,7 +37,7 @@
   }
 
   &-date {
-    color: gray('white');
+    color: gray('near-black');
     margin-bottom: 10px;
   }
 
@@ -46,7 +46,7 @@
   }
 
   &-tag {
-    color: gray('white');
+    color: gray('near-black');
     font-style: italic;
     text-decoration: none;
 
@@ -57,7 +57,7 @@
 
   &-more {
     @include title-font;
-    color: gray('white');
+    color: gray('near-black');
     display: inline-block;
     font-size: 20px;
     text-decoration: none;
